# logger

./: .gitignore  LICENSE  README.md
detail/jamo/: console_logger.cpp  console_logger.h  file_logger.cpp  file_logger.h  logger.h  network_logger.cpp  network_logger.h
detail/jamo/impls/: console_logger.cpp  console_logger.h  file_logger.cpp  file_logger.h  network_logger.cpp  network_logger.h
detail/jamo/internal/: logger.h
test/001_basic/: CMakeLists.txt  main.cpp
test/002_using_real/: CMakeLists.txt  main.cpp
